deployment/metabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: metabase.dataiesb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-service
            port:
              number: 80
